--- a/index.html
+++ b/index.html
@@ -7,7 +7,28 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome to My Portfolio</h1>
-    <p>This is my personal portfolio website.</p>
+    <header>
+        <h1>Welcome to My Portfolio</h1>
+        <p>A showcase of my work and skills</p>
+    </header>
+
+    <section id="about">
+        <h2>About Me</h2>
+        <p>Hi! I'm [Το όνομά σου], a passionate developer who loves building web applications.</p>
+    </section>
+
+    <section id="projects">
+        <h2>Projects</h2>
+        <p>Here are some of the projects I've worked on:</p>
+        <ul>
+            <li><strong>Project 1:</strong> <a href="#">Link</a> - Μια μικρή περιγραφή</li>
+            <li><strong>Project 2:</strong> <a href="#">Link</a> - Μια μικρή περιγραφή</li>
+        </ul>
+    </section>
+
+    <section id="contact">
+        <h2>Contact</h2>
+        <p>You can reach me at: <a href="mailto:your@email.com">your@email.com</a></p>
+    </section>
 </body>
 </html>
