--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Portfolio</h1>
-        <p>A showcase of my work and skills</p>
+        <h1>panakwn</h1>
     </header>
 
     <section id="about">
         <h2>About Me</h2>
-        <p>Hi! I'm [Το όνομά σου], a passionate developer who loves building web applications.</p>
+        <p>Hi! I'm Konstantinos</p>
     </section>
 
     <section id="projects">
@@ -28,7 +27,8 @@
 
     <section id="contact">
         <h2>Contact</h2>
-        <p>You can reach me at: <a href="mailto:your@email.com">your@email.com</a></p>
+        <p>You can reach me at: <a href="mailto:kostasp914@gmail.com">kostasp914@gmail.com</a></p>
+        <p>Instagram: @panakwn</p>
     </section>
 </body>
 </html>
